* 2013-08-14 - marcus.klein@open-xchange.com

 - Fix for bug 28272: Extended new graceful shutdown method with necessary checks prior to executing it.
 - Fix for bug 23141: Terminate OSGi framework and backend gracefully allowing components to remove their temporary things.
   Removing temporary files during startup because of maybe died JVM.

* 2013-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 26597: Apply default charset if multipart/form-data POST request misses mail-safe encoding for non-ascii words
 - Fix for bug 26869: Added missing imports to RSS messaging bundle
 - Fix for bug 24799: Refactored parsing of FB stream content to avoid strange empty messages

* 2013-08-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Disable Hazelcast's REST and Memcache client request listener services by default 

* 2013-08-13 - thorben.betten@open-xchange.com

 - Fix for bug 23992: Introduced property to disable folder caches in IMAP
 - Fix for bug 26023: Specify supported SSL protocols on secure connect attempt
 - Change for bug 27420: Handle possible unexpected EOF gracefully
 - Fix for bug 28125: Track I18nService as an optional service
 - Fix for bug 27565/28241: Orderly check for Halo service's availability

* 2013-08-12 - thorben.betten@open-xchange.com

 - Fix for bug 28003 + 28192: Use proper primary-key-dependent SQL statement + fixed SQL query

* 2013-08-09 - marcus.klein@open-xchange.com

 - Fix for bug 24624: White listed our known clients to have their logins recorded always. Testing the client login parameter for
   self-defeating values.

* 2013-08-09 - thorben.betten@open-xchange.com

 - Fix for bug 28110: Show an appropriate hint to perform a logout&login cycle after successful password-change

* 2013-08-08 - thorben.betten@open-xchange.com

 - Fix for bug 28139: Invalidate login-info cache entries, too, when invalidating context cachings