@@ -1,3 +1,7 @@
+* 2013-08-15 - thorben.betten@open-xchange.com
+
+ - Fix for bug 28317: Change the password for all user-associated sessions on password-change operation
+
 * 2013-08-14 - marcus.klein@open-xchange.com
 
  - Fix for bug 28272: Extended new graceful shutdown method with necessary checks prior to executing it.
